--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
             <div id="def"></div>
         </div>
         
-        <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+        <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
         <script type="text/javascript" src="assets/javascript/game.js"></script>
     </body>
 </html>
